# pico_dm_qd3503728_slint_mcu

./: 50-cmsis-dap.rules  Cargo.toml  README.md
.cargo/: config.toml
src/: graphics.rs  lib.rs  main.rs  overclock.rs
ui/: app-window.slint
